use small unicode triangles, which show up correctly on ios and look a little nicer anyway

--- a/_sass/neon-bindings/_layout.scss
+++ b/_sass/neon-bindings/_layout.scss
@@ -176,7 +176,7 @@
       &>h1, &>h2, &>h3, &>h4, &>h5, &>h6 {
         cursor: pointer;
         &::before {
-          content: "▼";
+          content: "▾";
           display: inline-block;
           width: 1.2em;
         }
@@ -190,7 +190,7 @@
 
       &>h1, &>h2, &>h3, &>h4, &>h5, &>h6 {
         &::before {
-          content: "▶";
+          content: "▸";
           display: inline-block;
           width: 1.2em;
         }
